webdrivermanager (1.6.0)

  + Support for taobao.org mirror in FirefoxDriverManager
  + Support for taobao.org mirror in ChromeDriverManager
  + Expose BrowserManager API following the builder pattern
  + New methods in BrowserManager API: version(), architecture(), arch32(), arch64(), useTaobaoMirror(), forceCache()
  + Deprecate setup method with parameters (now builder pattern is used)

 -- Boni Garcia <boni.gg@gmail.com>


webdrivermanager (1.5.1)

  + Change default URL for PhantomJS from npm.taobao.org to bitbucket.org
  + Allow running in separate classloader (PR #83 from phillcunnington)
  + Bug-fix: update EdgeDriverManager (PR #87 from oscarcarlsson)
  + Change default URL for PhantomJS from npm.taobao.org to bitbucket.org
  + Improve download internal logic (add pre/post download methods)
  + Bug-fix: support for PhantomJS 2.5.0-beta (issue #96)

 -- Boni Garcia <boni.gg@gmail.com>  Thu, 19 Jan 2017 23:12:00 +0200

webdrivermanager (1.5.0)

  + Change default name of properties file to webdrivermanager.properties
  + Deprecate MarionetteDriverManager (use instead FirefoxDriverManager)
  + Use of Selenium 3 in internal tests
  + Issue #77: bug-fix for phantomjs 32-bit artifact

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 15 Nov 2016 08:54:00 +0200


webdrivermanager (1.4.10)

  + Issue #61: Support HTTP proxy by means of env var HTTP_PROXY or HTTPS_PROXY (PR #62 from Sebl29)
  + Stop using htmlunit to download edge binaries (jsoup instead)
  + Compatibility with Selenium 3
  + Support for taobao mirror for chromedriver and  (wdm.chromeDriverUrl=https://npm.taobao.org/mirrors/chromedriver/)
  + Support for taobao mirror for operadriver (wdm.operaDriverUrl=https://npm.taobao.org/mirrors/operadriver/)

 -- Boni Garcia <boni.gg@gmail.com>  Thu, 13 Oct 2016 02:50:00 +0200


webdrivermanager (1.4.9)

  + Bug-fix issue #19 (regression): getDriverName returns a list of string